fix: Removed wrong shutters from scene for permanent southside shading

--- a/scenes.yaml
+++ b/scenes.yaml
@@ -1016,11 +1016,12 @@
   name: Dauer-Beschattung Südseite
   entities:
     cover.ja1_sudseite_rollo_wohnzimmer_sud_hmipw_drbl4_00165d899fbad2_ch2:
-      current_position: 12
+      current_position: 15
       interface_id: ccu.herbel.net-HmIP-RF
       address: 00165D899FBAD2:2
       model: HmIPW-DRBL4
       value_state: valid
+      channel_position: 15
       device_class: blind
       friendly_name: Wohnzimmer Süd
       supported_features: 15
@@ -1031,6 +1032,7 @@
       address: 00165D899FBAD2:14
       model: HmIPW-DRBL4
       value_state: valid
+      channel_position: 26
       device_class: blind
       friendly_name: Kind 1
       supported_features: 15
@@ -1041,6 +1043,7 @@
       address: 00165D899FBAD2:10
       model: HmIPW-DRBL4
       value_state: valid
+      channel_position: 27
       device_class: blind
       friendly_name: Kind 2
       supported_features: 15
@@ -1051,6 +1054,7 @@
       address: 00165D899FBAD2:6
       model: HmIPW-DRBL4
       value_state: valid
+      channel_position: 26
       device_class: blind
       friendly_name: Schlafzimmer
       supported_features: 15
@@ -1075,22 +1079,7 @@
       icon: mdi:window-shutter-auto
       friendly_name: Kind 2 Rollladensteuerung
       state: 'off'
-    input_boolean.autorollo_arbeitszimmer_west:
-      editable: true
-      icon: mdi:window-shutter-auto
-      friendly_name: Arbeitszimmer West Rollladensteuerung
-      state: 'off'
-    cover.ja2_nordseite_rollo_arbeiten_west_hmipw_drbl4_00165d899fbab0_ch10:
-      current_position: 15
-      interface_id: ccu.herbel.net-HmIP-RF
-      address: 00165D899FBAB0:10
-      model: HmIPW-DRBL4
-      value_state: valid
-      device_class: blind
-      friendly_name: Arbeiten West
-      supported_features: 15
-      state: open
-  icon: mdi:roller-shade
+  icon: mdi:window-shutter
   metadata:
     cover.ja1_sudseite_rollo_wohnzimmer_sud_hmipw_drbl4_00165d899fbad2_ch2:
       entity_only: true
@@ -1107,10 +1096,6 @@
     input_boolean.autorollo_kind1:
       entity_only: true
     input_boolean.autorollo_kind2:
-      entity_only: true
-    input_boolean.autorollo_arbeitszimmer_west:
-      entity_only: true
-    cover.ja2_nordseite_rollo_arbeiten_west_hmipw_drbl4_00165d899fbab0_ch10:
       entity_only: true
 - id: '1752050540179'
   name: Arbeiten - Beschatten
